Add Redis cache and testcontainer; Refactor DTOs; Add model, repository & config tests